# isa-umbrel-apps

./: .env.example  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  umbrel-app-store.yml  watchlist.json
docs/: STUDIO_TAB_PLAN.md
farmos/: CHANGELOG.md  HANDOFF.md  README.md  START.md  pytest.ini
farmos/backend/: pyproject.toml
farmos/backend/alembic/: env.py
farmos/backend/alembic/versions/: 0001_baseline.py  0002_money_and_workbooks.py  0003_program_deadline_date.py  0004_conservation.py  0005_evidence_requirements.py  0006_grain_contracts.py  0007_daily_brief.py  0008_operating_loan.py  0009_lease_client_id.py
farmos/backend/app/: auth.py  config.py  db.py  llm.py  main.py  manage.py  models.py  seed_demo.py
farmos/backend/app/api/v1/: __init__.py  agronomy.py  assistant.py  auth_routes.py  captures.py  conservation.py  documents.py  fields.py  financials.py  grain.py  inbox.py  leases.py  nudges.py  programs.py  records.py  sync.py  system.py  workbooks.py
farmos/backend/app/capture/: parse.py  pipeline.py  route.py  transcribe.py
farmos/backend/app/capture/prompts/: voice_parse_v1.txt
farmos/backend/app/cashflow_packs/: loader.py  schema.py
farmos/backend/app/cashflow_packs/packs/: ia-cashflow-2026.yaml
farmos/backend/app/jobs/: periodic.py  tasks.py  worker.py
farmos/backend/app/region_packs/: loader.py  schema.py
farmos/backend/app/region_packs/packs/: ia-2026.1.yaml  ia-2026.2.yaml  ia-2026.3.yaml  ia-2026.4.yaml  ia-2026.5.yaml
farmos/backend/app/services/: agronomy.py  assistant.py  backup.py  brief.py  cashflow.py  clu_import.py  compliance.py  financials.py  grain.py  lender_packet.py  mrv.py  program_finder.py  records.py  stacking.py  timestamping.py  weather.py  workbook_import.py
farmos/backend/app/tax_packs/: loader.py  schema.py
farmos/backend/app/tax_packs/packs/: schedule-f-2025.yaml
isa-farmos/: docker-compose.yml  umbrel-app.yml
isa-polibrief/: docker-compose.yml  umbrel-app.yml
scripts/: build-district-hucs.mjs  fetch-geo.mjs  (+2 more)
(+98 files in other folders)
