[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farmos-backend"
version = "0.2.1"
description = "Farm OS — self-hosted farm records for row-crop operations (Umbrel app)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "geoalchemy2>=0.15",
  "psycopg[binary]>=3.2,<3.3", # 3.3.x returns bytes for server_version; breaks SQLAlchemy dialect init
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "procrastinate>=2.9", # uses the psycopg3 connector we already depend on; no psycopg2 (source build)
  "anthropic>=0.40",
  "shapely>=2.0",
  "pyshp>=2.3", # pure-Python shapefile I/O — no GDAL, arm64-wheel-free
  "pyproj>=3.6",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "opentimestamps>=0.4.5",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
